--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,52 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-sqlalchemy>=1.4.23
-alembic>=1.7.1
-psycopg2-binary>=2.9.1
-python-dotenv>=0.19.0
-pydantic>=1.8.2
-pydantic[email]
-httpx>=0.23.0
-python-jose[cryptography]>=3.3.0
-passlib[bcrypt]>=1.7.4
-pytest>=6.2.5
-pytest-asyncio>=0.15.1
-aiohttp>=3.8.1
-anthropic>=0.3.0  # For Claude AI integration
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+alembic==1.14.0
+annotated-types==0.7.0
+anthropic==0.42.0
+anyio==4.8.0
+asyncpg==0.30.0
+attrs==24.3.0
+bcrypt==4.2.1
+certifi==2024.12.14
+cffi==1.17.1
+click==8.1.8
+cryptography==44.0.0
+distro==1.9.0
+dnspython==2.7.0
+ecdsa==0.19.0
+email_validator==2.2.0
+fastapi==0.115.6
+frozenlist==1.5.0
+greenlet==3.1.1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+iniconfig==2.0.0
+jiter==0.8.2
+Mako==1.3.8
+MarkupSafe==3.0.2
+multidict==6.1.0
+packaging==24.2
+passlib==1.7.4
+pluggy==1.5.0
+propcache==0.2.1
+psycopg2-binary==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.10.5
+pydantic-settings==2.7.1
+pydantic_core==2.27.2
+pytest==8.3.4
+pytest-asyncio==0.25.2
+python-dotenv==1.0.1
+python-jose==3.3.0
+rsa==4.9
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.36
+starlette==0.41.3
+typing_extensions==4.12.2
+uvicorn==0.34.0
+yarl==1.18.3
