--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,11 @@ anyio==4.8.0
 asyncpg==0.30.0
 attrs==24.3.0
 bcrypt==4.2.1
+beautifulsoup4==4.12.3
 certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.1
+chromedriver==2.24.1
 click==8.1.8
 cryptography==44.0.0
 distro==1.9.0
@@ -28,6 +31,7 @@ jiter==0.8.2
 Mako==1.3.8
 MarkupSafe==3.0.2
 multidict==6.1.0
+outcome==1.3.0.post0
 packaging==24.2
 passlib==1.7.4
 pluggy==1.5.0
@@ -38,15 +42,26 @@ pycparser==2.22
 pydantic==2.10.5
 pydantic-settings==2.7.1
 pydantic_core==2.27.2
+PySocks==1.7.1
 pytest==8.3.4
 pytest-asyncio==0.25.2
 python-dotenv==1.0.1
 python-jose==3.3.0
+requests==2.32.3
 rsa==4.9
+selenium==4.28.1
 six==1.17.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
 SQLAlchemy==2.0.36
 starlette==0.41.3
+trio==0.28.0
+trio-websocket==0.11.1
 typing_extensions==4.12.2
+urllib3==2.3.0
 uvicorn==0.34.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+wsproto==1.2.0
 yarl==1.18.3
