feat(endpoints): add relationship endpoints and fix async loading
- Add new relationship endpoints:
  - /articles/{id}/topics
  - /articles/{id}/books
  - /books/{id}/articles
  - /books/{id}/topics
  - /topics/{id}/articles
  - /topics/{id}/books

- Fix async loading in relationship queries using:
  - select() with selectinload()
  - scalar_one_or_none() for results

- Add logging for relationship endpoints
- Use proper async database access patterns
- Add logging for debugging relationship queries

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,18 @@
 [pytest]
 asyncio_mode = auto
+
+markers =
+    integration: marks tests as integration tests (deselect with '-m "not integration"')
+    slow: marks tests as slow (deselect with '-m "not slow"')
+
+# Configure test discovery
+testpaths = tests
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
+# Configure output
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_date_format = %Y-%m-%d %H:%M:%S
